# pvpgn-server-bak

./: CMakeLists.txt  ConfigureChecks.cmake  Dockerfile  README.md  README_DOCKER.md  bionic.dockerfile  d2gs.reg  docker-compose.yml  focal.dockerfile
conf/: CMakeLists.txt  bnetd.conf.in  bnetd.conf.win32  bnmaps.conf.in  channel.conf.in  command_groups.conf.in  email_resetpasswd.conf.in  sql_DB_layout.conf.in
conf/i18n/: bnhelp.conf  common.xml  newaccount.txt
decompile/: D2GS.exe.c
include/d2gelib/: d2server.h
sources/: d2cs_d2gs_character.h  d2gamelist.c  d2ge.c  handle_s2s.c
sources/d2gs/: d2gs.h  handle_s2s.h  main.c
sources/d2server_patches/: 1.asm  UberQuest.asm  Warden.asm
sources/d2warden/: d2callstub.cpp  d2ptrs.cpp  d2ptrs.h  d2warden.cpp
src/: CMakeLists.txt
src/bnetd/: CMakeLists.txt  account.cpp  account_email_resetpasswd.cpp  account_email_resetpasswd.h  account_email_verification.cpp  account_email_verification.h  account_wrap.cpp  account_wrap.h  adbanner.cpp  anongame.cpp  anongame_maplists.cpp  anongame_wol.cpp  anongame_wol.h  attrgroup.cpp  attrlayer.cpp  channel.cpp  channel.h  clan.cpp  command.cpp  command_groups.cpp  connection.cpp  connection.h  game.cpp  game.h  game_conv.cpp  handle_anongame.cpp  handle_apireg.cpp  handle_bnet.cpp  handle_bot.cpp  handle_irc.cpp  handle_irc_common.cpp  handle_telnet.cpp  handle_wol.cpp  handle_wol_gameres.cpp  i18n.h  icons.cpp  ipban.cpp  irc.cpp  ladder.cpp  luafunctions.cpp  (+21 more)
src/common/: CMakeLists.txt  addr.cpp  bnet_protocol.h  bnetsrp3.cpp  eventlog.cpp  field_sizes.h  packet.h  proginfo.cpp  proginfo.h  setup_before.h  tag.cpp  tag.h
src/compat/: CMakeLists.txt
src/d2dbs/: CMakeLists.txt  d2ladder.cpp  dbserver.cpp  dbspacket.cpp  handle_d2gs.cpp  handle_signal.cpp
src/d2gs/: CMakeLists.txt  bnethash.cpp  bnethash.h  callback.c  callback.cpp  callback.h  charlist.cpp  charlist.h  config.c  config.cpp  config.h  d2cs_d2gs_character.h  d2cs_d2gs_protocol.h  d2gamelist.c  d2gamelist.cpp  d2gamelist.h  d2ge.c  d2ge.cpp  d2ge.h  d2gs.h  eventlog.cpp  handle_s2s.c  handle_s2s.cpp  handle_s2s.h  list.h  main.c  main.cpp  net.c  net.cpp  net.h  telnetd.c  telnetd.cpp  telnetd.h  timer.c  timer.cpp  utils.c  utils.cpp  utils.h  vars.cpp  vars.h  (+2 more)
src/d2server_patches/: 1.asm  CMakeLists.txt  UberQuest.asm  Warden.asm
src/d2warden/: CMakeLists.txt  MyHashGameSeed.cpp  d2callstub.cpp  d2callstub.h  d2ptrs.cpp  d2ptrs.h  d2warden.cpp
src/patch_d2server/: patch_d2server.cpp
